--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .vscode/launch.json
 .vscode/tasks.json
 main.exe
+bender.ppm
+main
+.vscode/configurationCache.log
+.vscode/dryrun.log
+.vscode/targets.log
+.vscode/settings.json
